--- a/src/shared/add-collection-card/add-collection-card.component.html
+++ b/src/shared/add-collection-card/add-collection-card.component.html
@@ -1,3 +1,3 @@
-<div class="relative w-full h-64 flex items-center justify-center border-4 border-dashed border-gray-300 rounded-lg cursor-pointer hover:border-gray-400 transition-all duration-300">
+<div class="relative w-48 h-64 flex items-center justify-center border-4 border-dashed border-gray-300 rounded-xl cursor-pointer hover:border-gray-400 transition-all duration-300">
   <div class="text-gray-500 text-6xl">+</div>
 </div>
