--- a/src/shared/add-collection-card/add-collection-card.component.html
+++ b/src/shared/add-collection-card/add-collection-card.component.html
@@ -1,3 +1,15 @@
-<div class="relative w-48 h-64 flex items-center justify-center border-4 border-dashed border-gray-300 rounded-xl cursor-pointer hover:border-gray-400 transition-all duration-300">
+<div class="relative w-48 h-64 flex items-center justify-center border-4 border-dashed border-gray-300 rounded-xl cursor-pointer hover:border-gray-400 transition-all duration-300" (click)="startEditing()" *ngIf="!isEditing">
   <div class="text-gray-500 text-6xl">+</div>
+</div>
+
+<div class="relative w-48 h-64 flex flex-col items-center justify-center border-4 border-dashed border-gray-300 rounded-xl p-4" *ngIf="isEditing">
+  <input type="text" [(ngModel)]="collectionName" placeholder="Collection Name" class="w-full mb-4 p-2 border border-gray-300 rounded">
+  <div class="flex space-x-2">
+    <button (click)="saveCollection()" class="bg-green-500 text-white p-2 rounded hover:bg-green-600 transition-all duration-300">
+      &#10003;
+    </button>
+    <button (click)="cancelEditing()" class="bg-red-500 text-white p-2 rounded hover:bg-red-600 transition-all duration-300">
+      &#10005;
+    </button>
+  </div>
 </div>
