--- a/src/shared/add-collection-card/add-collection-card.component.html
+++ b/src/shared/add-collection-card/add-collection-card.component.html
@@ -7,10 +7,10 @@
 <div class="relative w-48 h-64 flex flex-col items-center justify-center border-4 border-dashed border-gray-300 rounded-xl p-4" *ngIf="isEditing">
   <input type="text" [(ngModel)]="collectionName" placeholder="Collection Name" class="w-full mb-4 p-2 border border-gray-300 rounded">
   <div class="flex space-x-2">
-    <button (click)="saveCollection()" class="bg-green-500 text-white w-10 h-10 flex items-center justify-center rounded hover:bg-green-600 transition-all duration-300">
+    <button (click)="saveCollection()" class="bg-green-500 text-white w-10 h-10 flex items-center justify-center rounded-full hover:bg-green-600 transition-all duration-300">
       <i class="fas fa-check"></i>
     </button>
-    <button (click)="cancelEditing()" class="bg-red-500 text-white w-10 h-10 flex items-center justify-center rounded hover:bg-red-600 transition-all duration-300">
+    <button (click)="cancelEditing()" class="bg-red-500 text-white w-10 h-10 flex items-center justify-center rounded-full hover:bg-red-600 transition-all duration-300">
       <i class="fas fa-times"></i>
     </button>
   </div>
