--- a/src/shared/shelf-list/shelf-list.component.html
+++ b/src/shared/shelf-list/shelf-list.component.html
@@ -1,10 +1,11 @@
 <div class="container mx-auto px-4">
   <div class="grid gap-4">
+    <app-add-collection-card class="mb-4"></app-add-collection-card>
     <app-shelf-card
       *ngFor="let shelf of shelves"
       [title]="shelf.shelfName"
       [images]="shelf.images"
+      class="mb-4"
     ></app-shelf-card>
-    <app-add-collection-card></app-add-collection-card>
   </div>
 </div>
