--- a/src/app/user-shelves/user-shelves.component.html
+++ b/src/app/user-shelves/user-shelves.component.html
@@ -1,3 +1,3 @@
 <div class="container mx-auto px-4">
-  <app-shelf-list [shelves]="shelves"></app-shelf-list>
+  <app-shelf-list [shelves]="(shelves$ | async) ?? []"></app-shelf-list>
 </div>
