--- a/src/shared/shelve/shelve.component.html
+++ b/src/shared/shelve/shelve.component.html
@@ -1,4 +1,18 @@
-<button (click)="onAddBook()" class="relative flex items-center justify-center w-10 h-10 text-blue-500 hover:text-blue-600 transition duration-300">
-  <i class="fas fa-list"></i>
-  <i class="fas fa-plus absolute bottom-0 right-0 text-xs text-blue-500 bg-white rounded-full p-0.5" style="transform: translate(-25%, -25%); font-size: 0.65rem;"></i>
-</button>
+<div class="relative">
+  <button (click)="onAddBook()" class="relative flex items-center justify-center w-10 h-10 text-blue-500 hover:text-blue-600 transition duration-300">
+    <i class="fas fa-list"></i>
+    <i class="fas fa-plus absolute bottom-0 right-0 text-xs text-blue-500 bg-white rounded-full p-0.5" style="transform: translate(-25%, -25%); font-size: 0.65rem;"></i>
+  </button>
+  <div *ngIf="showFlyout" class="absolute top-full right-0 mt-2 w-48 bg-white border border-gray-300 rounded-lg shadow-lg">
+    <ul *ngIf="items.length > 0; else noShelves">
+      <li *ngFor="let item of items" class="p-2 hover:bg-gray-100">
+        <span [class.font-bold]="item.isShelved">{{ item.name }}</span>
+      </li>
+    </ul>
+    <ng-template #noShelves>
+      <div class="p-2 text-gray-500">
+        You have no Shelves yet. <a href="/shelves" class="text-blue-500 hover:underline">Create one</a>.
+      </div>
+    </ng-template>
+  </div>
+</div>
